alignment fix

--- a/styles/_grid.scss
+++ b/styles/_grid.scss
@@ -161,11 +161,11 @@ $gutter-width: 1%;
 }
 
 .align-left {
-  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 .align-right {
-  justify-content: flex-end;
+  align-items: flex-end;
 }
 
 .column {
